# wickra-shazam

./: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/requirements/: ci-dev.in
.github/scripts/: check-cbindgen.sh
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_shazam.h
bindings/c/src/: lib.rs
bindings/csharp/WickraShazam/: DllResolver.cs  Native.cs  README.md  Shazam.cs  WickraShazam.csproj
bindings/csharp/WickraShazam.Tests/: GoldenTests.cs  ShazamTests.cs  WickraShazam.Tests.csproj
bindings/go/: README.md  go.mod  golden_test.go  shazam.go  shazam_test.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/shazam/: Native.java  Shazam.java
bindings/java/src/test/java/org/wickra/shazam/: GoldenTest.java  ShazamTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  shazam.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_shazam/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: shazam.R
bindings/r/src/: Makevars  Makevars.win  wickra_shazam.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/shazam-bench/: Cargo.toml
crates/shazam-bench/benches/: shazam.rs
crates/shazam-cli/: Cargo.toml
crates/shazam-cli/src/: args.rs  main.rs  run.rs
crates/shazam-core/: Cargo.toml
crates/shazam-core/src/: config.rs  error.rs  feature.rs  feature_set.rs  fingerprint.rs  index.rs  lib.rs  metric.rs  normalize.rs  search.rs  shazam.rs  spec.rs
crates/shazam-core/tests/: conformance.rs  golden.rs  parallel_eq_seq.rs  proptest_invariants.rs
docs/: ARCHITECTURE.md  Cookbook.md  FEATURES.md  FINGERPRINTS.md  LABELS.md  SIMILARITY.md
examples/: README.md
examples/c/: CMakeLists.txt  match.c  match.cpp
examples/csharp/Match/: Match.csproj  Program.cs
examples/data/current/: BTCUSDT.csv
examples/data/history/: BTCUSDT.csv
examples/data/specs/: crash_setup.json
examples/go/: go.mod  match.go
examples/java/: Match.java
examples/node/: match.js  package-lock.json  package.json
examples/python/: match.py
examples/r/: match.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: build_index.rs  match_index.rs  normalize_metric.rs  spec_parse.rs
golden/: README.md
golden/data/current/: sym-01.csv  sym-02.csv  sym-03.csv  sym-04.csv  sym-05.csv  sym-06.csv
golden/data/history/: sym-01.csv  sym-02.csv  sym-03.csv  sym-04.csv  sym-05.csv  sym-06.csv
golden/expected/: crash_setup.json  microstructure_dtw.json  price_euclid.json  regime_zscore.json
golden/specs/: microstructure_dtw.json  price_euclid.json  regime_zscore.json
