[package]
name = "wickra-shazam-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The core without the `parallel` feature: the fuzz build is sequential and lean,
# and never pulls rayon or the native exchange facade.
shazam-core = { path = "../crates/shazam-core", default-features = false }

# Detach from the parent workspace — cargo-fuzz builds this crate on its own with
# sanitizer flags on a nightly toolchain.
[workspace]

[[bin]]
name = "spec_parse"
path = "fuzz_targets/spec_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "build_index"
path = "fuzz_targets/build_index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "match_index"
path = "fuzz_targets/match_index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize_metric"
path = "fuzz_targets/normalize_metric.rs"
test = false
doc = false
bench = false
