[package]
name = "wickra-shazam-python"
description = "Python bindings for wickra-shazam: the data-driven history-fingerprint match core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_shazam"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
shazam-core = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
