[package]
name = "shazam-bench"
description = "Criterion benchmarks for the Wickra shazam core: build_index scaling by bars and feature count, match_index scaling by index size and metric, parallel vs sequential."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# Toggle the core's parallel path so `cargo bench` (default) measures the rayon
# match and `cargo bench --no-default-features` measures the sequential one.
default = ["parallel"]
parallel = ["shazam-core/parallel"]

[dependencies]
shazam-core = { path = "../shazam-core", version = "0.1.0", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "shazam"
harness = false
