[package]
name = "wickra-shazam-example"
description = "A runnable Rust example for the Wickra shazam core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "match"
path = "src/main.rs"

[dependencies]
shazam-core = { workspace = true }
serde_json = { workspace = true }
